--- a/contact.css
+++ b/contact.css
@@ -18,7 +18,7 @@ body::before {
 }
 
 .title {
-    color: rgb(0, 255, 217);
+    color: rgb(0, 0, 0);
 }
 
 #contact {
@@ -41,7 +41,7 @@ body::before {
 }
 
 input {
-    border-color: rgb(255, 0, 0);
+    /* border-color: rgb(255, 0, 0); */
     text-align: center;
     width: 35vh;
     height: 4vh;
@@ -49,23 +49,23 @@ input {
 
 textarea {
     text-align: center;
-    border-color: rgb(255, 0, 0);
+    /* border-color: rgb(255, 0, 0); */
 }
 
 button {
-    width: 20vh;
+    width: 15vh;
     height: 5vh;
-    border-radius: 20px;
-    background-color: rgb(255, 0, 0);
+    /* border-radius: 20px; */
+    background-color: rgb(0, 0, 0);
     cursor: pointer;
     color: rgb(255, 255, 255);
 }
 
 button:hover {
-    background-color: rgb(0, 255, 213);
+    background-color: rgb(23, 14, 131);
     cursor: pointer;
-    color: rgb(0, 0, 0);
-    transition: all 1s;
+    color: rgb(255, 255, 255);
+    transition: all 0.4s;
 }
 
 footer {
