--- a/contact.css
+++ b/contact.css
@@ -9,12 +9,13 @@ body {
 
 body::before {
     content: '';
-    background: url(contact.jpg) no-repeat center center/cover;
+    /* background: url(contact.jpg) no-repeat center center/cover; */
+    background:linear-gradient(to right, purple, blue);
     z-index: -1;
     position: absolute;
     width: 100%;
     height: 100vh;
-    filter: blur(10px);
+    /* filter: blur(10px); */
 }
 
 .title {
