--- a/contact.css
+++ b/contact.css
@@ -19,7 +19,7 @@ body::before {
 }
 
 .title {
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
 }
 
 #contact {
@@ -72,10 +72,11 @@ button:hover {
 footer {
     text-align: center;
     font-size: larger;
+    color: aqua;
 }
 
 footer a {
     font-weight: bolder;
     text-decoration: none;
-    color: rgb(255, 0, 0);
+    color: rgb(0, 242, 255);
 }
