--- a/contact.css
+++ b/contact.css
@@ -5,25 +5,15 @@ body {
     margin: 0;
     scroll-behavior: smooth;
     font-family: 'Eczar', serif;
+    background: linear-gradient(to right, purple, blue);
 }
-
-/* body::before {
-    content: '';
-    /* background: url(contact.jpg) no-repeat center center/cover; */
-    background:linear-gradient(to right, purple, blue);
-    z-index: -1;
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    /* filter: blur(10px); */
-} */
 
 .title {
     color: rgb(255, 255, 255);
 }
 
 #contact {
-    height: 95vh;
+    /* height: 95vh; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -46,11 +36,12 @@ input {
     border: 2px solid darkred;
     /* border-color: rgb(255, 0, 0); */
     text-align: center;
-    width: 35vh;
+    width: 400px;
     height: 4vh;
 }
 
 textarea {
+    width: 400px;
     border: 2px solid darkred;
     text-align: center;
     resize: none;
@@ -73,41 +64,20 @@ button:hover {
     transition: all 0.4s;
 }
 
-footer {
-    text-align: center;
-    font-size: larger;
-    color: aqua;
-}
-
-footer a {
-    font-weight: bolder;
-    text-decoration: none;
-    color: rgb(0, 242, 255);
-}
-
-
 @media screen and (max-width:628px) {
-    body{
+    body {
         background: lightpink;
     }
 
-    .form{
+    .form {
+        padding: none;
         background: none;
         box-shadow: none;
     }
 
-    input, textarea{
-        width: 300px;
+    input,
+    textarea {
+        width: 250px;
     }
 
-    footer {
-        text-align: center;
-        font-size: larger;
-        color: rgb(0, 0, 0);
-    }
-    footer a {
-        font-weight: bolder;
-        text-decoration: none;
-        color: rgb(255, 21, 0);
-    }
 }
