--- a/contact.css
+++ b/contact.css
@@ -54,13 +54,15 @@ button {
     background-color: rgb(0, 0, 0);
     cursor: pointer;
     color: rgb(255, 255, 255);
+    font-size: 15px;
     font-weight: bolder;
 }
 
 button:hover {
-    background-color: rgb(35, 21, 188);
+    background-color: rgb(27, 247, 255);
     cursor: pointer;
-    color: rgb(255, 255, 255);
+    border: none;
+    color: black;
     transition: all 0.4s;
 }
 
