--- a/contact.css
+++ b/contact.css
@@ -47,14 +47,16 @@ textarea {
 }
 
 button {
-    width: 15vh;
+    margin: 20px 0;
+    width: 53vh;
     height: 5vh;
-    border-radius: 50px;
-    background-color: rgb(0, 0, 0);
+    /* border-radius: 50px; */
+    background-color: darkred;
     cursor: pointer;
     color: rgb(255, 255, 255);
-    font-size: 15px;
+    font-size: 20px;
     font-weight: bolder;
+    border-style: none;
 }
 
 button:hover {
