--- a/contact.css
+++ b/contact.css
@@ -32,7 +32,7 @@ body {
 }
 
 input {
-    border: 2px solid rgb(0, 8, 255);
+    border: 2px solid rgb(153, 153, 173);
     /* border-color: rgb(255, 0, 0); */
     text-align: center;
     width: 400px;
@@ -41,7 +41,7 @@ input {
 
 textarea {
     width: 400px;
-    border: 2px solid rgb(0, 8, 255);
+    border: 2px solid rgb(153, 153, 173);
     text-align: center;
     resize: none;
 }
@@ -49,7 +49,8 @@ textarea {
 button {
     margin: 20px 0;
     width: 53vh;
-    height: 5vh;
+    height: 35px;
+    /* padding: 10px 0; */
     /* border-radius: 50px; */
     background-color: rgb(0, 8, 255);
     cursor: pointer;
