--- a/contact.css
+++ b/contact.css
@@ -5,7 +5,9 @@ body {
     margin: 0;
     scroll-behavior: smooth;
     font-family: 'Eczar', serif;
-    background: linear-gradient(to right, purple, blue);
+    /* background: linear-gradient(to right, purple, blue); */
+    background-image: linear-gradient(64.5deg, rgba(245, 116, 185, 1) 14.7%, rgba(89, 97, 223, 1) 88.7%);
+
 }
 
 .title {
@@ -13,7 +15,7 @@ body {
 }
 
 #contact {
-    /* height: 95vh; */
+    height: 99.9vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -29,6 +31,12 @@ body {
 
 .name {
     padding: 10px 0;
+}
+
+.Details {
+    color: rgb(91, 26, 222);
+    font-weight: bolder;
+    text-decoration: underline;
 }
 
 input {
@@ -48,32 +56,34 @@ textarea {
 
 button {
     margin: 20px 0;
-    width: 53vh;
+    width: 47vh;
     height: 35px;
-    /* padding: 10px 0; */
-    /* border-radius: 50px; */
-    background-color: rgb(222, 189, 26);
+    background-color: rgb(91, 26, 222);
     cursor: pointer;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     font-size: 20px;
     font-weight: bolder;
-    border-style: none;
+    border: 5px solid rgb(91, 26, 222);
 }
 
 button:hover {
-    background-color: rgb(27, 247, 255);
+    /* background-color: rgb(0, 4, 255); */
+    border-color: rgb(91, 26, 222);
+    background: none;
+    border: 2px solid rgb(91, 26, 222);
     cursor: pointer;
-    border: none;
-    color: black;
+    color: rgb(91, 26, 222);
     transition: all 0.4s;
 }
 
 @media screen and (max-width:628px) {
     body {
-        background: rgb(255, 255, 255);
+        /* background: rgb(255, 255, 255); */
+        background-image: linear-gradient(102.4deg, rgba(253, 189, 85, 1) 7.8%, rgba(249, 131, 255, 1) 100.3%);
     }
 
     .form {
+        border: 2px solid rgb(91, 26, 222);
         padding: none;
         background: none;
         box-shadow: none;
@@ -84,7 +94,7 @@ button:hover {
         width: 300px;
     }
 
-    button{
+    button {
         width: 300px;
     }
 
